--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,41 +1,44 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab One
+    <ion-title class="title">
+      
+      <div class="example1">
+        <h3>.APK BOOK STORE</h3>
+        </div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
+      <img src="../../assets/shelf-3195135_960_720.jpg" alt="" />
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        
+        <ion-card-title>Welcome to .APK BOOK STORE</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>Thats the thing about books. They let you travel without moving your feet.</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
-        <ion-label>Resources</ion-label>
+        <ion-label>Languages</ion-label>
       </ion-list-header>
       <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+      <img  src="../../assets/ionic-icon.png" style="width: 20px;">
+       <ion-label style="margin-left: 20px;">Ionic</ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+      <ion-item href="https://docs.microsoft.com/en-us/xamarin">
+        <img  src="../../assets/xamarine.png" style="width: 20px;">
+       <ion-label style="margin-left: 20px;">Xamarine</ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
+      <ion-item href="https://kotlinlang.org/docs/reference/">
+        <img  src="../../assets/kotlin.jpg" style="width: 20px;">
+       <ion-label style="margin-left: 20px;">Kotlin</ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
+      <ion-item href="https://developer.android.com/docs">
+        <img  src="../../assets/java_633928.png" style="width: 20px;">
+        <ion-label style="margin-left: 20px;">Java</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
