--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,43 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+      BOOK DETAIL
     </ion-title>
+    
   </ion-toolbar>
+  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+      <ion-fab-button class="fab-btn">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-list>
+        <ion-fab-button class="trsh-edt-btn" id="t-btn" color="light" (click)="bookListService.showConfirmAlert(singleBook,0); " >
+          <ion-icon name="trash"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button class="trsh-edt-btn" color="light" >
+          <ion-icon name="create"></ion-icon>
+        </ion-fab-button>
+       
+      </ion-fab-list>
+    </ion-fab>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-card>
+   <img src='../../assets/book.png'>
+    <ion-card-header>
+      <ion-card-title><h1>{{singleBook?.name}}</h1></ion-card-title>
+    </ion-card-header>
+    <ion-card-content >
+      
+      <h2><span style="font-weight: bold;"> Author:</span> {{singleBook?.author}}</h2>
+      <h2><span style="font-weight: bold;"> Edition:</span>{{singleBook?.ed}}th</h2>
+      <h2><span style="font-weight: bold;"> Price:</span> {{singleBook?.price}}</h2>
+      <h2><span style="font-weight: bold;"> Description:</span> {{singleBook?.desp}}</h2>
+    
+      
+    </ion-card-content>
+  
+
+
+  </ion-card>
+</ion-content>
