--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,30 @@
+ion-content:hover{
+    background-color: red;
+}
+.sc-ion-card-md-h {
+    /* --background: #f25454; */
+    box-shadow: blue;
+    --color: var(--ion-color-step-550,#737373);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    font-size: 14px;
+    -webkit-box-shadow: 5px 3px 1px 2px rgba(100, 149, 204, 0.68), -8px -6px 53px 0 rgba(30, 168, 210, 0.14), 0 1px 5px 0 rgba(0,0,0,.12)!important;
+    /* box-shadow: 0 3px 1px -2px rgba(239, 22, 22, 0.2), 0 2px 2px 0 rgba(20, 47, 236, 0.14), 0 1px 5px 0 rgba(30, 33, 33, 0.12); */
+}
+.fa-btn{
+width: 33px;
+height: 30px;
+background-color: #0091d2;}
 
+#tr-btn{
+    margin-right: -22px;
+    margin-bottom: 24px;
+    
+}
+
+#ed-btn{
+    margin-bottom: 24px;
+}
