--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,1 +1,42 @@
 
+.card-content-md h2 {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 2px;
+    margin-bottom: 9px !important;
+    font-size: 16px;
+    font-weight: 400;
+}
+.sc-ion-card-md-h {
+    /* --background: #f25454; */
+    box-shadow: #0091d2;
+    --color: var(--ion-color-step-550,#737373);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    font-size: 14px;
+    -webkit-box-shadow: 5px 3px 5px 2px rgba(100, 149, 204, 0.68), -8px -6px 53px 0 rgba(30, 168, 210, 0.14), 0 1px 5px 0 rgba(0,0,0,.12)!important;
+    /* box-shadow: 0 3px 1px -2px rgba(239, 22, 22, 0.2), 0 2px 2px 0 rgba(20, 47, 236, 0.14), 0 1px 5px 0 rgba(30, 33, 33, 0.12); */
+}
+
+.fab-btn{
+    margin-top: 37px;
+    /* margin-left: 79px; */
+    margin-right: 11px;
+    font-size: -21px;
+    width: 33px;
+    height: 37px;
+}
+.trsh-edt-btn{
+   
+    width: 33px;
+    height: 37px;
+    margin-right: 21px;
+}
+#t-btn{
+    margin-top: 14px;
+
+}
+
