--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,24 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="ios-book" ></ion-icon>
+      <ion-label>BOOK STORE</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>BOOKS LIST</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
+    <ion-tab-button (click)="openModal()">
+        <ion-icon name="ADD"></ion-icon>
+        <ion-label>ADD BOOK</ion-label>
+      </ion-tab-button>
+     
+  
+   
+
+    
   </ion-tab-bar>
 
 </ion-tabs>
